--- a/_layouts/post-news.html
+++ b/_layouts/post-news.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-  </head>
-  <body>
-    {% include nav.html %}
+{% include header.html %}
+
+<body>
+  {% include nav.html %}
+
+  <div class="narrow">
     <h1>{{page.title}}</h1>
     <p>{{page.author}} - {{page.date | date: "%B %d, %Y"}}</p>
     {{ content }}
-  </body>
+  </div>
+</body>
 
-  {% include nav.js %}
-  
-  </html>
+{% include nav.js %}
+
+{% include footer.html %}
