--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,8 +7,12 @@ body {
     color: white;
     font-size: large;
     margin: 0 auto;
+}
+
+.narrow {
     max-width: 950px;
     text-align: center;
+    margin: 0 auto;
 }
 
 /* Links - Start */
@@ -37,23 +41,6 @@ a:active {
 
 /* Links - End */
 
-/* Button - Start */
-
-.button {
-    background-color: white;
-    /* Green */
-    border: none;
-    color: #479459;
-    padding: 10px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 25px;
-    border-radius: 20px;
-}
-
-/* Button - End */
-
 /* Image Post - Start */
 
 .image_post {
@@ -72,8 +59,89 @@ p img {
 
 /* Image Post - End */
 
+/* ----------------------------------------------------------- Button ---------------------------------------------------------- */
 
-/* ---------------------------------------- Columns ---------------------------------------- */
+.button-container {
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange buttons in a column */
+    align-items: center; /* Center buttons horizontally */
+    gap: 20px; /* Space between buttons */
+    margin: 20px 0; /* Space above and below the button container */
+}
+
+.button {
+    background-color: white;
+    border: none;
+    color: #479459;
+    padding: 10px 20px; /* Adjusted padding for better appearance */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 25px;
+    border-radius: 20px;
+}
+
+.button a {
+    color: #479459;
+}
+
+.button a:visited {
+    color: white;
+    /* Color after the link has been visited */
+}
+
+.button a:hover {
+    color: #e4312b;
+    /* Color when the mouse is over the link */
+}
+
+.button a:active {
+    color: #e4312b;
+    /* Color when the link is clicked */
+}
+
+/* ----------------------------------------------------------- Button ---------------------------------------------------------- */
+
+/* ----------------------------------------------------------- Posts ----------------------------------------------------------- */
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.event {
+    overflow: hidden;
+    text-align: center;
+}
+
+.event img {
+    width: 100%;
+    height: auto;
+}
+
+.article {
+    overflow: hidden;
+    text-align: center;
+}
+
+.article img {
+    width: 100%;
+    height: auto;
+}
+
+.news {
+    overflow: hidden;
+    text-align: center;
+}
+.news img {
+    width: 100%;
+    height: auto;
+}
+
+/* ----------------------------------------------------------- Posts ----------------------------------------------------------- */
+
+/* ---------------------------------------------------------- Columns ---------------------------------------------------------- */
 
 .container {
     display: flex;
@@ -97,10 +165,10 @@ p img {
     }
 }
 
-/* ---------------------------------------- Columns ---------------------------------------- */
+/* ---------------------------------------------------------- Columns ---------------------------------------------------------- */
 
 
-/* ---------------------------------------- Top Nav ---------------------------------------- */
+/* ---------------------------------------------------------- Top Nav ---------------------------------------------------------- */
 
 /* Add a black background color to the top navigation */
 .topnav {
@@ -151,7 +219,9 @@ p img {
 }
 
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+/* When the screen is less than 600 pixels wide, 
+hide all links, except for the first one ("Home"). 
+Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 768px) {
     .topnav a:not(:first-child) {
         display: none;
@@ -179,4 +249,4 @@ p img {
     }
 }
 
-/* ---------------------------------------- Top Nav ---------------------------------------- */
+/* ---------------------------------------------------------- Top Nav --------------------------------------------------------- */
