--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -13,21 +13,24 @@
         <div class="grid">
             {% assign upcoming_events = site.posts | where: "categories", "event" %}
             {% assign current_time = site.time | date: "%s" %}
-            {% for event in upcoming_events %}
-            {% if event.event-date %}
-            {% assign event_date = event.event-date | date: "%s" %}
-            {% if event_date > current_time %}
-            <div class="event">
-                <a href="{{ event.url }}">
-                    {% if event.cover_image %}
-                    <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
+            {% assign upcoming_events_reversed = upcoming_events | reverse %}
+            
+            {% for event in upcoming_events_reversed %}
+                {% if event.event-date %}
+                    {% assign event_date = event.event-date | date: "%s" %}
+                    {% if event_date > current_time %}
+                        <div class="event">
+                            <a href="{{ event.url }}">
+                                {% if event.cover_image %}
+                                    <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
+                                {% endif %}
+                            </a>
+                            <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
+                        </div>
                     {% endif %}
-                </a>
-                <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
-            </div>
-            {% endif %}
-            {% endif %}
+                {% endif %}
             {% endfor %}
+            
         </div>
 
         <h2>Past Events</h2>
