--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -13,9 +13,10 @@
         <div class="grid">
             {% assign upcoming_events = site.posts | where: "categories", "event" %}
             {% assign current_time = site.time | date: "%s" %}
-            {% assign upcoming_events_reversed = upcoming_events | reverse %}
             
-            {% for event in upcoming_events_reversed %}
+            {% assign sorted_upcoming_events = upcoming_events | sort: "event-date" %}
+            
+            {% for event in sorted_upcoming_events %}
                 {% if event.event-date %}
                     {% assign event_date = event.event-date | date: "%s" %}
                     {% if event_date > current_time %}
