--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,50 @@
-</html>
+<footer>
+    <!-- _includes/footer.html -->
+    <hr style="border: 1px solid #ccc; margin: 20px 0;">
+
+    <div>
+        <p>Based in <strong>Orlando</strong></p>
+        <p>Email: <a href="mailto:FloridaPalestineNetwork@proton.me">FloridaPalestineNetwork@proton.me</a></p>
+    </div>
+
+    <div>
+        <a href="https://instagram.com/floridapalestinenetwork" target="_blank">
+            <img src="/assets/icons/instagram.svg" alt="Instagram" height="30" style="filter: invert(1); margin: 0 10px;">
+        </a>
+        <a href="https://x.com/FloridaPaliNet" target="_blank">
+            <img src="/assets/icons/twitter.svg" alt="Twitter" height="30" style="filter: invert(1); margin: 0 10px;">
+        </a>
+        <a href="https://www.facebook.com/FloridaPalestineNetwork" target="_blank">
+            <img src="/assets/icons/facebook.svg" alt="Facebook" height="30" style="filter: invert(1); margin: 0 10px;">
+        </a>
+    </div>
+
+    <div style="margin: 20px 0;">
+        <p><em>From The River To The Sea</em></p>
+        <p><em>Palestine Will Be Free</em></p>
+    </div>
+
+    <nav>
+        {% assign sorted_pages = site.pages | where: "menu", "true" | sort: "order", "last" %}
+        {% for page in sorted_pages %}
+        <a href="{{ page.url }}" style="margin: 0 10px;">{{ page.title }}</a>
+        {% endfor %}
+    </nav>
+
+    <div style="margin: 20px 0;">
+        <a href="https://forms.gle/dYkJYWZVAa7stD2w8" target="_blank"
+            style="padding: 10px 20px; background-color: #000000; color: white; text-decoration: none; border-radius: 5px;">Join FPN</a>
+        <a href="/donate"
+            style="padding: 10px 20px; background-color: #E4312b; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px;">Donate</a>
+        <a href="/join"
+            style="padding: 10px 20px; background-color: #149954; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px;">News Letter</a>
+    </div>
+
+    <div style="margin-top: 20px;">
+        <p>&copy; {{ site.time | date: '%Y' }} Florida Palestine Network. All rights reserved.</p>
+    </div>
+
+    <div>
+        <img src="/assets/images/FPN_circle_white.png" alt="Organization Logo" style="max-width: 200px; margin-top: 10px;">
+    </div>
+</footer>
