--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -5,25 +5,28 @@
     {% include nav.html %}
 
     <div class="narrow">
-        <h1>{{page.title}}</h1>
-        {{ content }}
+        <main>
+            <h1>{{page.title}}</h1>
+            {{ content }}
 
-        <div class="grid">
-            {% assign articles = site.posts | where: "categories", "article" | sort: "date" | reverse %}
-            {% for article in articles %}
-            <div class="article">
-                <a href="{{ article.url }}">
-                    {% if article.cover_image %}
-                    <img src="{{ article.cover_image }}" alt="{{ article.title }} cover image">
-                    {% endif %}
-                </a>
-                <p>{{ article.date | date: "%B %d, %Y" }}</p>
+            <div class="grid">
+                {% assign articles = site.posts | where: "categories", "article" | sort: "date" | reverse %}
+                {% for article in articles %}
+                <div class="article">
+                    <p>{{ article.date | date: "%B %d, %Y" }}</p>
+                    <a href="{{ article.url }}">
+                        {% if article.cover_image %}
+                        <img src="{{ article.cover_image }}" alt="{{ article.title }} cover image">
+                        {% endif %}
+                    </a>
+                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
-        </div>
+        </main>
+        {% include footer.html %}
     </div>
 </body>
 
 {% include nav.js %}
 
-{% include footer.html %}
+</html>
