--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -5,58 +5,64 @@
     {% include nav.html %}
 
     <div class="narrow">
+        <main>
+            <h1>{{page.title}}</h1>
+            <p style="margin-bottom: 0px;"> Lorem ipsum odor amet, consectetuer adipiscing elit. Tristique inceptos potenti et eget; diam quisque
+                pretium. Non malesuada torquent facilisis tincidunt at ante? Consequat est augue curabitur ridiculus
+                neque. Euismod quisque facilisis augue accumsan cursus a. Placerat fermentum tincidunt pulvinar faucibus
+                leo. Odio quam nec nam mauris hendrerit habitant iaculis. Faucibus dignissim aliquet dignissim at
+                ultricies facilisi sodales. Pulvinar lacus massa, molestie mattis eget inceptos lacinia.</p>
 
-        <h1>{{page.title}}</h1>
-        {{ content }}
+            <h2 style="margin-bottom: 0px;">Upcoming Events</h2>
+            <div class="grid">
+                {% assign upcoming_events = site.posts | where: "categories", "event" %}
+                {% assign current_time = site.time | date: "%s" %}
 
-        <h2>Upcoming Events</h2>
-        <div class="grid">
-            {% assign upcoming_events = site.posts | where: "categories", "event" %}
-            {% assign current_time = site.time | date: "%s" %}
-            
-            {% assign sorted_upcoming_events = upcoming_events | sort: "event-date" %}
-            
-            {% for event in sorted_upcoming_events %}
+                {% assign sorted_upcoming_events = upcoming_events | sort: "event-date" %}
+
+                {% for event in sorted_upcoming_events %}
                 {% if event.event-date %}
-                    {% assign event_date = event.event-date | date: "%s" %}
-                    {% if event_date > current_time %}
-                        <div class="event">
-                            <a href="{{ event.url }}">
-                                {% if event.cover_image %}
-                                    <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
-                                {% endif %}
-                            </a>
-                            <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
-                        </div>
-                    {% endif %}
+                {% assign event_date = event.event-date | date: "%s" %}
+                {% if event_date > current_time %}
+                <div class="event">
+                    <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
+                    <a href="{{ event.url }}">
+                        {% if event.cover_image %}
+                        <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
+                        {% endif %}
+                    </a>
+                </div>
                 {% endif %}
-            {% endfor %}
-            
-        </div>
+                {% endif %}
+                {% endfor %}
 
-        <h2>Past Events</h2>
-        <div class="grid">
-            {% assign past_events = site.posts | where: "categories", "event" %}
-            {% assign current_time = site.time | date: "%s" %}
-            {% for event in past_events %}
-            {% if event.event-date %}
-            {% assign event_date = event.event-date | date: "%s" %}
-            {% if event_date <= current_time %} <div class="event">
-                <a href="{{ event.url }}">
-                    {% if event.cover_image %}
-                    <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
-                    {% endif %}
-                </a>
-                <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
-        </div>
-        {% endif %}
-        {% endif %}
-        {% endfor %}
-    </div>
-    </div>
+            </div>
 
+            <h2 style="margin-bottom: 0px;">Past Events</h2>
+            <div class="grid">
+                {% assign past_events = site.posts | where: "categories", "event" %}
+                {% assign current_time = site.time | date: "%s" %}
+                {% for event in past_events %}
+                {% if event.event-date %}
+                {% assign event_date = event.event-date | date: "%s" %}
+                {% if event_date <= current_time %} 
+                <div class="event">
+                    <p>{{ event.event-date | date: "%B %d, %Y" }}</p>
+                    <a href="{{ event.url }}">
+                        {% if event.cover_image %}
+                        <img src="{{ event.cover_image }}" alt="{{ event.title }} cover image">
+                        {% endif %}
+                    </a>
+                </div>
+                {% endif %}
+                {% endif %}
+                {% endfor %}
+            </div>
+        </main>
+    {% include footer.html %}
+    </div>
 </body>
 
 {% include nav.js %}
 
-{% include footer.html %}
+</html>
