--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,11 +5,14 @@
   {% include nav.html %}
 
   <div class="narrow">
-    <h1>{{page.title}}</h1>
-    {{ content }}
+    <main>
+      <h1>{{page.title}}</h1>
+      {{ content }}
+    </main>
+    {% include footer.html %}
   </div>
 </body>
 
 {% include nav.js %}
 
-{% include footer.html %}
+</html>
