--- a/_layouts/post-event.html
+++ b/_layouts/post-event.html
@@ -5,12 +5,15 @@
   {% include nav.html %}
 
   <div class="narrow">
-    <h1>{{page.title}}</h1>
-    <p>{{ page.event-date | date: "%B %d, %Y" }} - {{page.event-time}} - {{page.event-location}}</p>
-    {{ content }}
+    <main>
+      <h1>{{page.title}}</h1>
+      <p>{{ page.event-date | date: "%B %d, %Y" }} - {{page.event-time}} - {{page.event-location}}</p>
+      {{ content }}
+    </main>
+    {% include footer.html %}
   </div>
 </body>
 
 {% include nav.js %}
 
-{% include footer.html %}
+</html>
