--- a/_layouts/post-news.html
+++ b/_layouts/post-news.html
@@ -5,12 +5,15 @@
   {% include nav.html %}
 
   <div class="narrow">
-    <h1>{{page.title}}</h1>
-    <p>{{page.author}} - {{page.date | date: "%B %d, %Y"}}</p>
-    {{ content }}
+    <main>
+      <h1>{{page.title}}</h1>
+      <p>{{page.author}} - {{page.date | date: "%B %d, %Y"}}</p>
+      {{ content }}
+    </main>
+    {% include footer.html %}
   </div>
 </body>
 
 {% include nav.js %}
 
-{% include footer.html %}
+</html>
