--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,5 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.jpg">
   </head>
