--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -7,7 +7,7 @@
     <div class="narrow">
         <main>
             <h1>{{page.title}}</h1>
-            {{ content }}
+            <p>Learn about the resistance.</p>
 
             <div class="grid">
                 {% assign articles = site.posts | where: "categories", "article" | sort: "date" | reverse %}
