--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -7,11 +7,7 @@
     <div class="narrow">
         <main>
             <h1>{{page.title}}</h1>
-            <p style="margin-bottom: 0px;"> Lorem ipsum odor amet, consectetuer adipiscing elit. Tristique inceptos potenti et eget; diam quisque
-                pretium. Non malesuada torquent facilisis tincidunt at ante? Consequat est augue curabitur ridiculus
-                neque. Euismod quisque facilisis augue accumsan cursus a. Placerat fermentum tincidunt pulvinar faucibus
-                leo. Odio quam nec nam mauris hendrerit habitant iaculis. Faucibus dignissim aliquet dignissim at
-                ultricies facilisi sodales. Pulvinar lacus massa, molestie mattis eget inceptos lacinia.</p>
+            <p style="margin-bottom: 0px;">Join us in education, resistance, and cultural exchange.</p>
 
             <h2 style="margin-bottom: 0px;">Upcoming Events</h2>
             <div class="grid">
