--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
 
     <a href="https://forms.gle/dYkJYWZVAa7stD2w8" target="_blank"
         style="margin: 10px; padding: 10px 20px; background-color: #000000; color: white; text-decoration: none; border-radius: 5px; box-shadow: 0 5px 10px 0 rgba(0,0,0,0.25); display:inline-block;">Join FPN</a>
-    <a href="/donate"
+    <a href="/support"
         style="margin: 10px; padding: 10px 20px; background-color: #E4312b; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px; box-shadow: 0 5px 10px 0 rgba(0,0,0,0.25); display:inline-block;">Donate</a>
     <a href="/join"
         style="margin: 10px; padding: 10px 20px; background-color: #149954; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px; box-shadow: 0 5px 10px 0 rgba(0,0,0,0.25); display:inline-block;">Newsletter</a>
