--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - FPN</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="/assets/branding/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Barlow:400&display=swap" rel="stylesheet">
   </head>
