--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="topnav" id="myTopnav">
-    <a class="logo" href="/index.html"><img alt="Logo" src="/assets/images/logo.png"></a>
+    <a class="logo" href="/index.html"><img alt="Logo" src="/assets/branding/logo.png"></a>
     {% assign sorted_pages = site.pages | where: "menu", "true" | sort: "order", "last" %}
     {% for page in sorted_pages %}
     <a class="nav_link" href="{{ page.url }}">{{ page.title }}</a>
