--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -36,7 +36,7 @@
 
             <h2 style="margin-bottom: 0px;">Past Events</h2>
             <div class="grid">
-                {% assign past_events = site.posts | where: "categories", "event" %}
+                {% assign past_events = site.posts | where: "categories", "event" | sort: "event-date" | reverse %}
                 {% assign current_time = site.time | date: "%Y-%m-%d" | date: "%s"%}
                 {% for event in past_events %}
                 {% if event.event-date %}
