--- a/_layouts/post-event.html
+++ b/_layouts/post-event.html
@@ -7,7 +7,9 @@
   <div class="narrow">
     <main>
       <h1>{{page.title}}</h1>
-      <p>{{ page.event-date | date: "%B %d, %Y" }} - {{page.event-time}} - {{page.event-location}}</p>
+      <p>🗓️: {{ page.event-date | date: "%B %d, %Y" }}</p>
+      <p>⏰: {{page.event-time}}</p>
+      <p>📍: {{page.event-location}}</p>
       {{ content }}
     </main>
     {% include footer.html %}
