--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,5 @@
     <title>{{ page.title }} - FPN</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     <link rel="icon" type="image/x-icon" href="/assets/branding/favicon.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Barlow:400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
