--- a/assets/css/25_06_15_main.scss
+++ b/assets/css/25_06_15_main.scss
@@ -61,7 +61,7 @@ a {
 }
 
 a:visited {
-    color: white;
+    color: #e4312b;
     /* Color after the link has been visited */
 }
 
@@ -111,7 +111,7 @@ a:active {
 }
 
 .button a:visited {
-    color: white;
+    color: #e4312b;
     /* Color after the link has been visited */
 }
 
